# autoprox

./: LICENSE  README-websocket-udp.md  README.md  pyproject.toml  udp-websocket-comm-extension.md  usage_example.py
src/autoprox/: __init__.py  main.py  run.py
src/autoprox/routes/: __init__.py  auth.py  data.py  health.py  network.py  srmudp_websocket.py  websocket.py
src/autoprox/utils/: __init__.py  client.py  crypto.py  encryption.py  network.py  srmudp_bridge.py  srmudp_manager.py  stun_client.py  stun_srmudp.py  udp_manager.py
