[tool.poetry]
name = "autoprox"
version = "0.1.2"
description = "simple autonomi proxy server written in python"
authors = []
readme = "README.md"
license = "MIT"
packages = [{include = "autoprox", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
autonomi-client = "==0.4.1"
fastapi = ">=0.110.0"
uvicorn = ">=0.27.1"
pydantic = ">=2.6.3"
cryptography = ">=42.0.0"
websockets = ">=12.0"
pyzmq = ">=26.4"
aiohttp = "^3.11.18"

[tool.poetry.group.dev.dependencies]
black = ">=24.2.0"
mypy = ">=1.9.0"
ruff = ">=0.3.0"
build = ">=1.0.3"
twine = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autoprox = "autoprox.run:main"
