[tool.poetry]
name = "autoprox"
version = "0.2.0"
description = "WebSocket to SRMUDP bridge server"
authors = []
readme = "README.md"
license = "MIT"
packages = [{include = "autoprox", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.110.0"
uvicorn = ">=0.27.1"
pydantic = ">=2.6.3"
websockets = ">=12.0"
srmudp = "^0.0.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.2.0"
mypy = ">=1.9.0"
ruff = ">=0.3.0"
build = ">=1.0.3"
twine = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autoprox = "autoprox.run:main"
